test/analyze/name_resolution/duplicate_record_field_error.myte
module test

type Rec { foo: Int, foo: Bool, foo: Unit }

fun main() {}